css/main.css
html,
button,
input,
select,
textarea {
    color: #222;
}

html {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
    clear: both;
}

h2{
    color:#1BA1E2;
}

/*
 * Remove the gap between images, videos, audio and canvas and the bottom of
 * their containers: h5bp.com/i/440
 */

audio,
canvas,
img,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}



/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/*
 * Header and whole page CSS
 */

html {
    font-family: "Segoe UI Light", sans-serif, arial;
}

body {
    text-align: center;
}

.infohead {
    font-family: "Segoe UI Light", sans-serif, arial;
    color: #1BA1E2;
    font-size: 24px;
}

#headlogo {
    float: left;
    width: 84px;
    height: 84px;
}

.headtext {
    background-color: #1BA1E2;
    color: #fff;
    font-size: 48px;
    padding: 7px 12px 10px;
    margin: 0 6px 0 0;
}

header {
    -webkit-box-shadow: 0 0 10px #888;
    -moz-box-shadow: 0 0 10px #888;
    box-shadow: 0 0 10px #888;
}

header .headtext {
    float: left;
    display: inline-block;
}

nav a {
    display: inline;
    padding: 35px 1.25% 17px;
    font-size: 24px;
    color: #fff;
    text-decoration: none !important;
}

nav a:hover {
    background-color: #1BA1E2;
    -webkit-box-shadow: 0 0 5px #0097e0;
    -moz-box-shadow: 0 0 5px #0097e0;
    box-shadow: 0 0 5px #0097e0;
}
nav a img:hover {
    background-color: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}
nav a img {
    float:right;
    padding: 0.5% 12px;
}

nav {
    background-color: #202020;
    display: block;
    padding: 35px 0 16px;
    text-align: left;
}


.content {
    margin: 15px auto;
    text-align: left;
    width: 960px;
}

#main_content {
    background-color: #202020;
    -webkit-box-shadow: 0 0 10px #888;
    -moz-box-shadow: 0 0 10px #888;
    box-shadow: 0 0 10px #888;
}

#main_content .headtext {
    width: 912px;
    text-align: left;
    display: block;
    padding: 0px 24px 0px;
    margin: 0 0 24px;
}

article {
    padding: 12px;
    background-color: #fff;
    margin: 0 24px 24px;
}

#main_content article {
    width: 888px;
}

#main_content .offset_big_left, #main_content .offset_big_right {
    width: 640px;
}

#main_content .offset_big_left, #main_content .offset_little_left {
    float: left;
}

#main_content .offset_big_left article, #main_content .offset_big_right article {
    width: 568px;
}

#main_content .offset_little_right, #main_content .offset_little_left {
    width: 320px;
}

#main_content .offset_little_right, #main_content .offset_big_right {
    float: right;
}

#main_content .offset_little_right article, #main_content .offset_little_right article {
    width: 272px;
    margin: 0 0 24px;
}

#main_content .offset_little_right img {
    height: 296px;
    width: 296px;
    margin: 0 0 24px;
}

#main_content .offset_little_left img {
    height: 296px;
    width: 296px;
    margin: 0 24px 24px;
}

article header, #description header {
    font-family: "Segoe UI Light", sans-serif, arial;
    color: #1BA1E2;
    font-size: 24px;
    border-bottom: 2px solid #202020;
    -webkit-wz-box-shadow: none;
    -moz-wz-box-shadow: none;
    box-shadow: none;
}

article div {
    font-family: "Segoe UI", sans-serif, arial;
    color: #222;
    font-size: 16px;
}

article div p {
    text-indent: 20px;
}

#navside_content aside {
    width: 272px;
    margin: 0 0 24px 24px;
    background-color: #202020;
    float: left;
    padding: 0 0 24px;
    -webkit-box-shadow: 0 0 10px #888;
    -moz-box-shadow: 0 0 10px #888;
    box-shadow: 0 0 10px #888;
}

#navside_content aside .headtext {
    width: 248px;
    display: block;
    text-align: center;
    margin: 0 0 24px;
    padding: 0 12px 0;
}

#twitter {
    width: 250px;
    margin: 12px 12px;
}


#product_series {
    display: block;
    font-size: 24px;
    width: 200px;
    padding: 12px 24px;
    background-color: #1BA1E2;
    color: #fff;
    margin: 0 0 0 24px;
    text-decoration: none !important;
}

#product_series:hover {
    background-color: #7ec1e2;
    -webkit-box-shadow: 0 0 5px #0097e0;
    -moz-box-shadow: 0 0 5px #0097e0;
    box-shadow: 0 0 5px #0097e0;
}

#product_entry {
    display: block;
    font-family: "Segoe UI", sans-serif, arial;
    font-size: 12px;
    width: 200px;
    padding: 12px;
    background-color: #fff;
    color: #222;
    margin: 0 0 0 48px;
    text-decoration: none !important;
}

#product_entry:hover {
    color: #fff;
    background-color: #7ec1e2;
    -webkit-box-shadow: 00 5px #0097e0;
    -moz-box-shadow: 00 5px #0097e0;
    box-shadow: 00 5px #0097e0;
}

#navside_content section {
    float: right;
    width: 616px;
    margin: 0 24px 24px;
    background-color: #202020;
    -webkit-box-shadow: 0 0 10px #888;
    -moz-box-shadow: 0 0 10px #888;
    box-shadow: 0 0 10px #888;
}

#navside_content section .headtext {
    width: 568px;
    text-align: left;
    display: block;
    padding: 0px 24px 0px;
}
/* ... */

